Fri Oct 11 03:58:25 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* eval.c (scm_nconc2last): Revert last change; there seems to be
	other stuff going on here.

Fri Oct 11 02:43:59 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* eval.c (scm_nconc2last): Make sure that each element of lst
	(which is a list of argument lists, except for the tail) is a
	proper list, i.e., finite and terminated by '().

Thu Oct 10 21:09:13 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* unif.c (scm_ra_set_contp): Localize `inc' declaration.
	Clarifies flow.

	* struct.c (scm_make_struct, scm_make_vtable_vtable): Use the
	symbolic name for the tag, scm_tc3_cons_gloc, instead of just
	saying "1".

	* vectors.c (scm_make_vector): Fill vectors with the undefined
 	value, to help make Guile Scheme code more portable to other
 	Schemes.

	* symbols.c (scm_intern_obarray_soft, scm_sysintern): Doc fixes.
	* symbols.h, tags.h: Doc fixes.
	
Wed Oct  9 19:39:29 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* async.c (scm_take_signal): Doc fixes.

Mon Oct  7 22:30:34 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* numbers.c (scm_divbigint): When the remainder is zero, we don't
	want to subtract it from the modulus; we just want to leave it
	alone.

Mon Oct  7 00:14:17 1996  Mikael Djurfeldt  <mdj@kenneth>

	* init.c (scm_boot_guile_1): Bugfix: i --> base in argument to
	`scm_init_threads'.

	* throw.h (scm_catch_apply): Removed the `lazyp' argument.

	* throw.c (scm_catch_apply): Finished implementation of
	`lazy-catch'.

Sun Oct  6 05:26:05 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* filesys.c (scm_sys_select): move SCM_ALLOW_INTS past the sreturn
	check.
	(scm_init_filesys): set "i/o-extensions" feature.
	include feature.h.
	
Sat Oct  5 12:22:00 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.in (root.o): Correct dependencies.

Sat Oct  5 18:40:42 1996  Mikael Djurfeldt  <mdj@kenneth>

	* Makefile.in: Added dependency entry for root.o.
